[package]
name = "sps30-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sps30 = "0.1"
rppal = { version = "0.11.3", features = ["hal"] }

color-eyre = "0.6"
structopt = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-error = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0"}
warp = "0.3"
tokio = { version = "1", features = ["full"] }
simple-prometheus-exporter = { git = "https://github.com/timothyb89/simple-prometheus-exporter-rs", tag = "v0.1.0" }
signal-hook = "0.3"
